# ross

./: .gitignore  LICENSE  README.md  build_with_vcpkg.cmd  configure_with_vcpkg.cmd  event.json  profile.json  result.csv
.github/workflows/: build.yml
cpp_realtime_ocr/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  build.cmd  event.json  profile.json  setup.ps1
cpp_realtime_ocr/config/: roi_config.json
cpp_realtime_ocr/include/: types.h
cpp_realtime_ocr/include/capture/: cuda_interop.h  d3d11_capture.h
cpp_realtime_ocr/include/detection/: change_detector.h  entry_all_detector.h  entry_trigger.h  glyph_ocr.h  panel_finder.h  symbol_matcher.h  text_parser.h  trigger_roi_builder.h  yolo_detector.h
cpp_realtime_ocr/include/ocr/: ctc_decoder.h  svtr_inference.h  tensorrt_engine.h
cpp_realtime_ocr/include/processing/: cuda_kernels.h  roi_extractor.h  row_detector.h  template_matcher.h
cpp_realtime_ocr/include/tracking/: edge_expand.h  panel_tracker.h
cpp_realtime_ocr/include/utils/: config_loader.h  logger.h  profiler.h  roi_overlay.h  roi_selector.h  stb_image.h  timer.h
cpp_realtime_ocr/include/video/: mf_demuxer.h  mf_source_reader.h  nvdec_decoder.h
cpp_realtime_ocr/models/: en_dict.txt
cpp_realtime_ocr/src/: main.cpp  test_interop.cpp  test_tensorrt.cpp
cpp_realtime_ocr/src/capture/: cuda_interop.cpp  d3d11_capture.cpp
cpp_realtime_ocr/src/cuda/: template_matching.cu
cpp_realtime_ocr/src/detection/: change_detector.cpp  entry_all_detector.cpp  entry_trigger.cpp  glyph_ocr.cpp  panel_finder.cpp  symbol_matcher.cpp  text_parser.cpp  trigger_roi_builder.cpp  yolo_detector.cpp
cpp_realtime_ocr/src/ocr/: ctc_decoder.cpp  svtr_inference.cpp  tensorrt_engine.cpp
cpp_realtime_ocr/src/processing/: cuda_kernels.cu  roi_extractor.cpp  row_detector.cpp  template_matcher.cpp
cpp_realtime_ocr/src/tracking/: edge_expand.cpp  panel_tracker.cpp
cpp_realtime_ocr/src/utils/: config_loader.cpp  image_loader.cpp  logger.cpp  profiler.cpp  roi_overlay.cpp  roi_selector.cpp  timer.cpp
cpp_realtime_ocr/src/video/: mf_demuxer.cpp  mf_source_reader.cpp  nvdec_decoder.cpp
cpp_realtime_ocr/templates/: col_pnl.tmpl  col_price.tmpl  col_qty.tmpl  col_symbol.tmpl  col_value.tmpl  row_0.tmpl  row_1.tmpl  row_2.tmpl  table_header.tmpl
cpp_realtime_ocr/templates/headers/: README.md
cpp_realtime_ocr/templates/symbols/: APVO_0.png.bak  APVO_1.png.bak  APVO_2.png.bak
cpp_realtime_ocr/tools/: extract_templates.py  find_header_loc.py  ocr_scan_frame.py  ocr_scan_row.py  tighten_symbol_templates.py
lightspeed_positions_extractor/lightspeed_positions_extractor/: README.md  requirements.txt
lightspeed_positions_extractor/lightspeed_positions_extractor/lspex/: cli.py  config.py  events.py  grouping.py  ocr.py  preprocess.py  roi.py  timeline.py
lightspeed_positions_extractor/lightspeed_positions_extractor/scripts/: quick_test.py
ross_entry_trigger_working/: README.md  event.json  profile.json  run.py
training/: annotate.py  trading_windows.yaml  train.py
